# minotaur

./: .gitignore  CLAUDE.md  MCTS_ANALYSIS_REPORT.md  MCTS_ARCHITECTURE_CLARIFICATION.md  MCTS_DATA_FLOW.md  MCTS_REFACTORING.md  README.md  REF_20250630_0310.md  TODO.md  ZERO.md  fix_test_autoregistration.py  hot_path_optimizations.py  list_comprehension_opportunities.md  manager.py  mcts.py  performance_optimization_report.md  performance_optimizations_demo.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_feature_discovery.py  test_dynamic_system.py  test_resume_fix.py
_DOC_NEW_SYSTEM/: MASTER_PROGRESS.md
config/: mcts_config.yaml  mcts_config_fast_real.yaml  mcts_config_fast_test.yaml  mcts_config_s5e6_fast_real.yaml  mcts_config_s5e6_fast_real.yaml.backup  mcts_config_s5e6_fast_test.yaml  mcts_config_s5e6_fast_test.yaml.backup  mcts_config_s5e6_i10.yaml  mcts_config_s5e6_i10.yaml.backup  mcts_config_s5e6_production.yaml  mcts_config_titanic_i100_mcts_feature.yaml  mcts_config_titanic_mcts_test.yaml  mcts_config_titanic_new_pipeline.yaml  mcts_config_titanic_new_pipeline.yaml.backup  mcts_config_titanic_test-i10.yaml  mcts_config_titanic_test-i10.yaml.backup  mcts_config_titanic_test.yaml  mcts_config_titanic_test.yaml.backup  mcts_config_titanic_test_i100.yaml  mcts_config_with_new_pipeline.yaml  mcts_info_test.yaml
docs/: AUTOGLUON_CONFIG_GUIDE.md  CONFIG_COMPARISON.md  DOCS-GIT-UPDATE.md  EXPERTS-REVIEW-20250702.md  FEATURE_CATALOG_MIGRATION.md  FEATURE_CATALOG_PERFORMANCE_OPTIMIZATION.md  FEATURE_OPERATION_MAPPING_ISSUE.md  PLAN-REF1.md  (+16 more)
(+327 files in other folders)
